...
enum Vantage: String, Codable, CaseIterable {
    case dtl = "DTL"
    case faceOn = "Face-On"
    
    var displayName: String {
        switch self {
        case .dtl: return "Down the Line"
        case .faceOn: return "Face-On"
        }
    }
    
    var shortName: String {
        rawValue
...
